k8s/frontend-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: hermes
      tier: frontend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: hermes
        tier: frontend
        track: stable
    spec:
      containers:
        - name: nginx
          image: "miljanabogdanovic/frontend:latest"
          imagePullPolicy: Always
          lifecycle:
            preStop:
              exec:
                command: ["/usr/sbin/nginx","-s","quit"]
