k8s/profile-db-statefulset.yaml
apiVersion: apps/v1

kind: StatefulSet

metadata:

  name: profile-cassandra

  labels:

    app: profile-cassandra

spec:

  serviceName: profile-cassandra

  replicas: 1

  selector:

    matchLabels:

      app: profile-cassandra

  template:

    metadata:

      labels:

        app: profile-cassandra

    spec:

      terminationGracePeriodSeconds: 1800

      containers:

      - name: profile-cassandra

        image: miljanabogdanovic/cassandra:latest

        imagePullPolicy: Always

        ports:

        - containerPort: 7000

          name: intra-node

        - containerPort: 7001

          name: tls-intra-node

        - containerPort: 7199

          name: jmx

        - containerPort: 9042

          name: cql

        resources:

          limits:

            cpu: "500m"

            memory: 1Gi

          requests:

            cpu: "500m"

            memory: 1Gi

        securityContext:

          capabilities:

            add:

              - IPC_LOCK

        lifecycle:

          preStop:

            exec:

              command: 

              - /bin/sh

              - -c

              - nodetool drain

        volumeMounts:

        - name: profile-cassandra-data

          mountPath: /profile-cassandra_data
      

  # These are converted to volume claims by the controller

  # and mounted at the paths mentioned above.

  # do not use these in production until ssd GCEPersistentDisk or other ssd pd

  volumeClaimTemplates:

  - metadata:

      name: profile-cassandra-data

    spec:

      accessModes: [ "ReadWriteOnce" ]

      storageClassName: fast

      resources:

        requests:

          storage: 1Gi
