k8s/tweets-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: tweet
  labels:
    app: tweet
spec:
  selector:
    matchLabels:
      app: tweet
  replicas: 1 
  template:
    metadata:
      labels:
        app: tweet
    spec:
      containers:
        - name: tweet
          image: miljanabogdanovic/tweet:latest 
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
