k8s/profile-db-service.yaml
apiVersion: v1

kind: Service

metadata:

  labels:

    app: profile-cassandra

  name: profile-cassandra

spec:

  clusterIP: None

  ports:

  - port: 9042

  selector:

    app: profile-cassandra
