k8s/timeline-service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: timeline-service
  labels:
    app: timeline
spec:
  selector:
    app: timeline
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
  type: ClusterIP
