k8s/tweets-db-service.yaml
apiVersion: v1

kind: Service

metadata:

  labels:

    app: tweets-cassandra

  name: tweets-cassandra

spec:

  clusterIP: None

  ports:

  - port: 9042

  selector:

    app: tweets-cassandra
